viz: Avoid Struct Name Collision by Making Nested Classes

This should fix the root issue found when trying to add pixel tests for
SkiaRenderer. This CL puts DrawRPDQParams as nested classes into each
renderer.

Bug: 826970
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: If387abd00afdb19e9498fea843438da8e94aa31b
Reviewed-on: https://chromium-review.googlesource.com/1000543
Reviewed-by: enne <enne@chromium.org>
Commit-Queue: weiliangc <weiliangc@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549200}
Former-commit-id: e6f3548a29f54fe55db4e32737410cda7639892d