components/viz/service/display/gl_renderer.h
@@ -52,7 +52,6 @@ class DynamicGeometryBinding;
 class ScopedRenderPassTexture;
 class StaticGeometryBinding;
 class TextureDrawQuad;
-struct DrawRenderPassDrawQuadParams;
 
 // Class that handles drawing of composited render layers using GL.
 class VIZ_SERVICE_EXPORT GLRenderer : public DirectRenderer {
@@ -168,6 +167,8 @@ class VIZ_SERVICE_EXPORT GLRenderer : public DirectRenderer {
     ScopedGpuMemoryBufferTexture texture;
     int frames_waiting_for_reuse = 0;
   };
+
+  struct DrawRenderPassDrawQuadParams;
 
   // If any of the following functions returns false, then it means that drawing
   // is not possible.
